# buildguard

./: .gitignore  COMMERCIAL_LICENSE.md  LICENSE.txt  README.md  pyproject.toml  sample-bad-requirements.txt  sample-good-requirements.txt
.github/workflows/: publish-pypi.yml
examples/: requirements-empty.txt  requirements-invalid.txt  requirements-missing.txt
scripts/: setup_local_venv.sh  smoke_test_check_failure.py  smoke_test_check_success.py  smoke_test_missing_distribution.py
src/buildguard/: __main__.py  checker.py  cli.py  licensing.py  models.py  parsing.py  process.py  report.py  venvtools.py
