[build-system]
requires = ['setuptools>=68', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'buildguard'
version = '0.1.0'
description = 'Validate that requirements.txt installs cleanly before CI builds run'
readme = 'README.md'
requires-python = '>=3.10'
dependencies = []

[project.scripts]
buildguard = 'buildguard.cli:main'

[tool.setuptools]
package-dir = {'' = 'src'}

[tool.setuptools.packages.find]
where = ['src']
