[build-system]
requires = ['setuptools>=68', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'buildguard'
version = '0.1.0'
description = 'Catch upstream Python dependency breakage before it surprises your CI build'
readme = 'README.md'
requires-python = '>=3.10'
dependencies = []

[project.scripts]
buildguard = 'buildguard.cli:main'

[tool.setuptools]
package-dir = {'' = 'src'}

[tool.setuptools.packages.find]
where = ['src']
